--- a/config/database.yml
+++ b/config/database.yml
@@ -16,11 +16,10 @@
 #
 development:
   adapter: postgresql
+  host: localhost
   encoding: unicode
   database: eattogether_development
   pool: 5
-  username: eattogether
-  password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -48,13 +47,9 @@ test:
   encoding: unicode
   database: eattogether_test
   pool: 5
-  username: eattogether
-  password:
 
 production:
   adapter: postgresql
   encoding: unicode
   database: eattogether_production
   pool: 5
-  username: eattogether
-  password:
