--- a/config/database.yml
+++ b/config/database.yml
@@ -42,7 +42,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   adapter: postgresql
   encoding: unicode
   database: eattogether_test
@@ -53,3 +53,6 @@ production:
   encoding: unicode
   database: eattogether_production
   pool: 5
+
+cucumber:
+  <<: *test
