Not allow view event for user that have not access

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,9 @@ development:
   host: localhost
   encoding: unicode
   database: eattogether_development
+  username: deploy
+  password: password
+  encoding: utf8
   pool: 5
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -46,12 +49,18 @@ test: &test
   adapter: postgresql
   encoding: unicode
   database: eattogether_test
+  username: deploy
+  password: password
+  encoding: utf8
   pool: 5
 
 production:
   adapter: postgresql
   encoding: unicode
   database: eattogether_production
+  username: deploy
+  password: password
+  encoding: utf8
   pool: 5
 
 cucumber:
