--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -1,8 +1,19 @@
 <%
 rerun = File.file?('rerun.txt') ? IO.read('rerun.txt') : ""
-rerun_opts = rerun.to_s.strip.empty? ? "--format #{ENV['CUCUMBER_FORMAT'] || 'progress'} features" : "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} #{rerun}"
-std_opts = "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} --strict --tags ~@wip"
+rerun_opts = rerun.to_s.strip.empty? ? "--format progress features" : "--format pretty #{rerun}"
+std_opts = "--format progress features --tags ~@wip --tag ~@wip-new-core -r features --strict"
+std_opts << " --tags ~@wip-jruby" if defined?(JRUBY_VERSION)
+
+wip_opts = "--color -r features --tags @wip,@wip-new-core"
+wip_opts << ",@wip-jruby" if defined?(JRUBY_VERSION)
 %>
-default: <%= std_opts %> features
-wip: --tags @wip:3 --wip features
-rerun: <%= rerun_opts %> --format rerun --out rerun.txt --strict --tags ~@wip
+default:     <%= std_opts %> --tags ~@jruby
+jruby:       <%= std_opts %> --tags ~@wire
+jruby_win:   <%= std_opts %> --tags ~@wire CUCUMBER_FORWARD_SLASH_PATHS=true
+windows_mri: <%= std_opts %> --tags ~@jruby --tags ~@wire --tags ~@needs-many-fonts CUCUMBER_FORWARD_SLASH_PATHS=true
+ruby_1_9:    <%= std_opts %> --tags ~@jruby
+ruby_2_0:    <%= std_opts %> --tags ~@jruby
+ruby_2_1:    <%= std_opts %> --tags ~@jruby
+wip:         --wip <%= wip_opts %> features
+none:        --format pretty
+rerun:       <%= rerun_opts %> --format rerun --out rerun.txt --strict --tags ~@wip --tag ~@wip-new-core
