--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,4 +1,4 @@
-name: Ruby
+name: Tests
 
 on: [push]
 
@@ -12,8 +12,8 @@ jobs:
     - name: Set up Ruby 2.6
       uses: actions/setup-ruby@v1
       with:
-        ruby-version: 2.6.x
-    - name: Build and test with Rake
+        ruby-version: 2.6.4
+    - name: Build and test
       run: |
         gem install bundler
         bundle install --jobs 4 --retry 3
